--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html>
   <head>
-    <title>React Packup Template</title>
-    <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre.min.css">
+    <title>guricerin's portal</title>
     <link rel="icon" href="favicon.ico" />
     <script src="src/main.tsx"></script>
   </head>
