--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>guricerin's portal</title>
+    <link rel="stylesheet" href="static/style.scss" />
     <link rel="icon" href="favicon.ico" />
     <script src="src/main.tsx"></script>
   </head>
