--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
           gyroControls: false,
           minHeight: 200.0,
           minWidth: 200.0,
-          speed: 1.2,
+          speed: 2,
+          highlightColor: 0x4aff,
+          baseColor: 0xfcd8d8,
+          blurFactor: 0.7,
         })
       })
     </script>
