--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vanta@0.5.24/dist/vanta.fog.min.js"></script>
   </head>
   <body>
-    <div id="main"></div>
+    <div id="main" class="root"></div>
     <script>
       window.addEventListener("DOMContentLoaded", () => {
         // https://www.vantajs.com/?effect=fog
