--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
           minHeight: 200.0,
           minWidth: 200.0,
           speed: 2,
-          highlightColor: 0x4aff,
+          highlightColor: 0x3f3fe3,
+          lowlightColor: 0xb1b1cf,
           baseColor: 0xfcd8d8,
           blurFactor: 0.7,
         })
