--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:url" content="https://guricerin.github.io/portal/">
     <title>guricerin's portal</title>
     <link rel="stylesheet" href="static/style.scss" />
     <!-- 画像ファイルだけ static 直下に置いたら、build後のindex.htmlではうまくパス解決してくれない(static/favicon.ico のまま) -->
