deploy: fee8a4223d6b541a1480b85756b0def1c1a30f1f

--- a/index.html
+++ b/index.html
@@ -1,35 +1,1 @@
-<!DOCTYPE html><html><head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:url" content="https://guricerin.github.io/portal/">
-    <title>guricerin's portal</title>
-    <link rel="stylesheet" href="index.564f99c886e6d465c32722c8b9f90b82.css">
-    <!-- 画像ファイルだけ static 直下に置いたら、build後のindex.htmlではうまくパス解決してくれない(static/favicon.ico のまま) -->
-    <link rel="icon" href="favicon.ico">
-    <script src="index.0539a4732a1a93a6ed0edbcdba752199.js"></script>
-    <script src="https://unpkg.com/three@0.146.0/build/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vanta@0.5.24/dist/vanta.fog.min.js"></script>
-  </head>
-  <body>
-    <div id="main" class="root"></div>
-    <script>
-      window.addEventListener("DOMContentLoaded", () => {
-        // https://www.vantajs.com/?effect=fog
-        VANTA.FOG({
-          el: "#main",
-          mouseControls: true,
-          touchControls: true,
-          gyroControls: false,
-          minHeight: 200.0,
-          minWidth: 200.0,
-          speed: 2,
-          highlightColor: 0x3f3fe3,
-          lowlightColor: 0xb1b1cf,
-          baseColor: 0xfcd8d8,
-          blurFactor: 0.7,
-        })
-      })
-    </script>
-  
-
-</body></html>
+<html><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width, initial-scale=1.0"/><meta property="og:url" content="https://guricerin.github.io/portal/"/><link rel="stylesheet" href="style.css"/><link rel="icon" href="favicon.ico"/><title>guricerin&#39;s portal</title></head><body><main class="container"><div class="avator"><img src="avator.jpg"/><span>guricerin</span></div></main></body></html>
