deploy: b05c1dbe30df343ab84aab831435ae23070d7387

--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<html><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width, initial-scale=1.0"/><meta property="og:url" content="https://guricerin.github.io/portal/"/><link rel="stylesheet" href="style.css"/><link rel="icon" href="favicon.ico"/><title>guricerin&#39;s portal</title></head><body><main class="container"><div class="avator"><img src="avator.jpg"/><span>guricerin</span></div></main></body></html>
+<!doctype html>
+  <html>
+    <head>
+      <meta charset="utf-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <meta property="og:url" content="https://nitro6th.net" />
+      <meta property="og:title" content="guricerin&#39;s portal" />
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@materializecss/materialize@2.0.3/dist/css/materialize.min.css">
+      <link rel="stylesheet" href="css/style.css" />
+      <link rel="icon" href="favicon.ico" />
+      <title>guricerin&#39;s portal</title>
+    </head>
+    <body>
+      <header />
+      <main class="contents"><div class="container my-5"><div class="avator"><img class="circle responsive-img" src="img/avator.jpg"/><span class="mt-3">guricerin</span></div></div></main>
+      <footer class="age-footer"><hr/><div class="footer-copyright"><div class="">Powered By <a class="white-text" href="https://pages.github.com/">GitHub Pages</a>, Designed by <a class="white-text" href="https://materializeweb.com/">Materialize</a></div></div></footer>
+      <script src="https://cdn.jsdelivr.net/npm/@materializecss/materialize@2.0.3/dist/js/materialize.min.js"></script>
+    </body>
+  </html>
