--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!doctype html>
-  <html>
+  <html lang="ja">
     <head>
       <meta charset="utf-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <meta property="og:url" content="https://nitro6th.net" />
       <meta property="og:title" content="guricerin&#39;s portal" />
-      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@materializecss/materialize@2.0.3/dist/css/materialize.min.css">
-      <link rel="stylesheet" href="css/style.css" />
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+      <link rel="stylesheet" href="css/style.css" /> <!-- overrides bulma -->
       <link rel="icon" href="favicon.ico" />
       <title>guricerin&#39;s portal</title>
     </head>
     <body>
-      <main class="contents"><div class="container my-5"><div class="avator"><img class="circle responsive-img" src="img/avator.jpg"/><span class="mt-3">guricerin</span></div></div></main>
-      <script src="https://cdn.jsdelivr.net/npm/@materializecss/materialize@2.0.3/dist/js/materialize.min.js"></script>
+      <main class="section"><div class="container"><section class="section"><div class="avator"><img src="img/avator.jpg"/><span>guricerin</span></div></section><section class="section"><div class="container"><h2 class="subtitle">Accounts</h2><hr/><ul class="account"><li><a href="https://keybase.io/guricerin" target="_blank" rel="noopener noreferrer">Keybase</a></li><li><a href="https://github.com/guricerin" target="_blank" rel="noopener noreferrer">GitHub</a></li><li><a href="https://twitter.com/guricerin" target="_blank" rel="noopener noreferrer">Twitter</a></li><li><a href="https://www.linkedin.com/in/shotaro-ikeguchi-678630249/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li><li><a href="https://guricerin.github.io/shit-blog/" target="_blank" rel="noopener noreferrer">Blog</a></li></ul></div></section></div></main>
     </body>
   </html>
